# location-movement-poc

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/discovery/: CalmInnopac.xsl  axiell-to-folio-upsert.md  calm-to-sierra-harvester-flow.md  item-requesting-flow-sequence.md  sierra-to-folio-migration-plan.md
notebooks/: folio_okapi_api_test_item.ipynb
